# final_master_thesis

./: .gitignore  README.md  pyproject.toml
CLEAN/analysis/h1_homophily/: PIPELINE_README.md  STATUS_agent_B.md  UNIFIED_RESULTS_N17_steps1_4_6.md  _common.py  generate_thesis_figures.py  n17_orchestrator.py  phase3_crossfilm_addressee_value.py  phase3_crossfilm_method_validation.py
CLEAN/data/00_corpus/: characters.csv  final_films.csv
CLEAN/data/01_raw_scripts/: beautyandthebeast_1991.txt  coco_2017.txt  elemental_2023.txt  encanto_2021.txt  frozen_2013.txt  incredibles_2_2018.txt  inside_out_2015.txt  monsters_inc_2001.txt  onward_2020.txt  raya_and_the_last_dragon_2021.txt  toy_story_3_2010.txt  zootopia_2016.txt
CLEAN/data/02_processed/: README_film_features_all.md  film_features_all.csv.bak  film_features_all_n17.csv  film_features_all_n17.csv.bak  film_features_social.csv
CLEAN/data/02_processed/up/: scenes.csv  (+10 more)
CLEAN/notebooks/: 01_parse_scenes_and_characters.ipynb  02_Validation_Gold_set.ipynb  03_validation_addressee_prediction.ipynb  04_inter_annotator_agreement.ipynb  05_addressee_tagging_scene_level.ipynb  06_network_analysis_PAU.ipynb  07_compute_extended_features.ipynb  08_compute_social_features.ipynb  09_analysis.ipynb  09_analysis_appendix.ipynb  10_descriptive_only.ipynb  10_descriptive_only_appendix.ipynb  11_min_edge_sensitivity.ipynb  PIPELINE_README.md
CLEAN/scripts/: PIPELINE_README.md  build_film_features_social.py  compute_extended_features.py  regen_all_films.py  run_06_all_films.py  scan_character_reviews.py  screenplay_parser_utils.py
(+221 files in other folders)
