[project]
name = "final-master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.107.1",
    "groq>=1.4.0",
    "ipykernel>=6.29.0",
    "openai>=2.41.0",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
]

[tool.uv]
package = false
