[project]
name = "final-master-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.107.1",
    "groq>=1.4.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.11.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "openpyxl>=3.1.5",
    "pandas==2.2.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false
